resources/kubernetes-manifests/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: hello-stripprefix
  namespace: default

spec:
  stripPrefix:
    prefixes:
      - /hello
