resources/kubernetes-manifests/hello-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: ornikar-hello:1.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  # type: NodePort
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      # nodePort: 31333
