resources/kubernetes-manifests/world-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world-deployment
  labels:
    app: world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: world
  template:
    metadata:
      labels:
        app: world
    spec:
      containers:
      - name: world
        image: ornikar-world:1.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: world-service
spec:
  # type: NodePort
  selector:
    app: world
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      # nodePort: 31313
