resources/kubernetes-manifests/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: "traefik-lb"
  rules:
    - host: ornikar.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 3000
          - path: /world
            pathType: Prefix
            backend:
              service:
                name: world-service
                port:
                  number: 3000
