resources/kubernetes-manifests/traefik-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`ornikar.dev`) && PathPrefix(`/hello`)
    kind: Rule
    services:
    - name: hello-service
      port: 3000
    middlewares:
    - name: hello-stripprefix
  - match: Host(`ornikar.dev`) && PathPrefix(`/world`)
    kind: Rule
    services:
    - name: world-service
      port: 3000
